# pixpad

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OpenEXR.txt  README.md  list_src.py  make3rd.py  pixpad.sln  ply.py  utf8.py
sparrow/: CMakeLists.txt
sparrow/common/: any_stride_iterator.h  log.h  util.cpp
sparrow/material/: mtl_collada.h  mtl_flat_color.h  mtl_tex_color.cpp
sparrow/mathex/: ImathBoxAlgoExt.h  ImathMatrixExt.h  mathfwd.h  vecmath.h
sparrow/pipeline/: gen_mesh.h  raster.h  rs_line.h  spw_command.cpp  spw_pipeline.cpp  spw_pipeline.h  spw_rasterizer.h  spw_render_target.cpp
sparrow/renderer/: camera.cpp  camera.h  clipping.cpp  clipping.h  index_buffer.h  load_collada.cpp  material.cpp  material.h  mesh.cpp  mesh.h  metric.cpp  metric.h  render_target.h  scene.cpp  scene.h  shader.h  spw_command.cpp  spw_config.h  spw_pipeline.cpp  spw_pipeline.h  spw_pipeline_wireframe.cpp  spw_pipeline_wireframe.h  spw_rasterizer.h  spw_renderer.cpp  spw_renderer.h  surface.h  tile.cpp  tile.h  vertex_buffer.h  vertex_layout.h
sparrow/scene/: camera.cpp  camera.h  light.cpp  light.h  load_collada.cpp  scene.cpp  scene.h  scene_obj.cpp  scene_obj.h  static_mesh.cpp  static_mesh.h
sparrow/shader/: flat_color.h  phone_color.h  tex_color.cpp  tex_color.h
sparrow/thread/: disruptor.h  folly_queue.h  lockfree_rb_q.h  platform_info.cpp  platform_info.h  ring_queue.h
sparrow/thread/test/: test_disruptor.cpp  test_lockfree_rb_q.cpp
src/demo/d3d_start/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  engine.h  engine_pch.h
src/engine/common/: any_stride_iterator.h  assertion_macros.h  common_macros.h  memory.h  memory_tracking.cpp  task_thread.cpp  task_thread.h  utility.cpp  utility.h
src/engine/game/: game_application.cpp  game_application.h  game_instance.h  game_window.h
src/engine/game/private/: game_application.cpp  game_framework_pch.h  memory_tracking.cpp  utility.cpp
src/engine/game/public/: game_application.h  game_framework.h  game_instance.h  game_window.h  log_macros.h  memory.h  renderer.h  utility.h
src/engine/mathex/: floatmath.h  vecmath.cpp  vecmath.h
src/engine/platform/: platform.h
src/engine/platform/windows/: game.rc  resource.h  windows_application.cpp  windows_application.h  windows_platform.cpp  windows_platform.h  windows_window.cpp  windows_window.h
src/engine/renderer/: image.cpp  image.h  index_buffer.cpp  index_buffer.h  mesh.cpp  mesh.h  ply.cpp  ply.h  renderer.h  util.h  vertex_buffer.cpp  vertex_buffer.h  vertex_layout.h
src/engine/renderer/Direct3D12/: d3d_helper.h  renderer_d3d12.cpp  renderer_d3d12.h
src/engine/renderer/d3d12/: d3d12_type.h  d3d_helper.cpp  d3d_helper.h  renderer_d3d12.cpp  renderer_d3d12.h  resource_loader.cpp  resource_loader.h
src/engine/renderer/sparrow/: clipping.h  material.h  metric.h  render_command.h  render_target.h  renderer.h  sampler.h  shader_api.h  spw_command.h  spw_config.h  spw_pipeline.h  spw_pipeline2.h  spw_rasterizer.h  spw_render_target.h  spw_renderer.h  spw_tile.h  spw_tile_buffer.h  surface.h  tile.h
src/engine/renderer/sparrow/core/: spw_pipeline2.cpp  spw_pipeline2.h  spw_rasterizer.cpp  spw_rasterizer.h  spw_tile_buffer.h
src/engine/renderer/sparrow/private/: clipping.cpp  material.cpp  metric.cpp  render_command.cpp  renderer.cpp  sampler.cpp  shader_api.cpp  spw_command.cpp  spw_pipeline.cpp  spw_pipeline2.cpp  spw_rasterizer.cpp  spw_render_target.cpp  spw_renderer.cpp  spw_tile.cpp  surface.cpp  tile.cpp
src/engine/renderer/sparrow/renderer/: clipping.h  index_buffer.h  material.h  mesh.cpp  metric.cpp  render_command.h  renderer.cpp  (+13 more)
src/pixpad/: CMakeLists.txt  app_config.h  console.cpp  console_log.h  image_frame.cpp  main.cpp  panel.cpp
src/pixpad/demo/: demo_base.cpp  one_triangle.cpp
src/pixpad/game/: application.h  game.h
src/pixpad/mac/: Renderer.mm  main.m
src/pixpad/mac/resource/: Main.storyboard
src/pixpad/panel/: im_console.cpp  imgui_console.cpp  imgui_main.cpp  imgui_pixpad.cpp  imgui_pixpad.h
src/pixpad/windows/: image_frame.cpp  imgui_impl_glfw_gl3.cpp  main.cpp  main_gl.cpp  resource.h  stdafx.h  view_sparrow.cpp  wmain.cpp
src/sparrow/: CMakeLists.txt
src/sparrow/common/: any_stride_iterator.h  image.cpp  image.h  log.cpp  log.h  ply.cpp  ply.h  shellcmd.h  stb_log.h  unitest.h  util.cpp  util.h
src/sparrow/core/: spw_pipeline2.h  spw_rasterizer.cpp  spw_rasterizer.h  spw_tile.cpp  spw_tile_buffer.cpp  spw_tile_buffer.h
src/sparrow/material/: mtl_collada.h  mtl_color.h  mtl_diffuse.h
src/sparrow/mathex/: ImathBoxAlgoExt.h  ImathMatrixExt.h  ImathVecExt.h  mathfwd.h  vecmath.cpp  vecmath.h  xs_float.h
src/sparrow/renderer/: clipping.cpp  clipping.h  index_buffer.h  material.h  mesh.cpp  mesh.h  metric.cpp  metric.h  raster.h  render_command.cpp  render_command.h  render_target.h  renderer.cpp  renderer.h  sampler.cpp  sampler.h  shader_api.cpp  shader_api.h  shader_util.h  spw_command.cpp  spw_pipeline.cpp  spw_pipeline.h  spw_pipeline_wireframe.cpp  spw_pipeline_wireframe.h  spw_rasterizer.h  spw_render_target.cpp  spw_renderer.cpp  spw_renderer.h  spw_texture.cpp  spw_texture.h  surface.cpp  surface.h  tile.cpp  tile.h  vertex_buffer.cpp  vertex_buffer.h  vertex_layout.cpp  vertex_layout.h
src/sparrow/scene/: camera.h  light.cpp  light.h  load_collada.cpp  scene.h  scene_obj.cpp  scene_obj.h  static_mesh.cpp  static_mesh.h
src/sparrow/thread/: disruptor.cpp  disruptor.h  folly_queue.h  platform_info.cpp  platform_info.h  ring_queue.h  spin_lock.h
src/sparrow/thread/test/: main.cpp  test_disruptor.cpp  test_mpmc_queue.cpp  test_ring_queue.cpp  test_spsc_queue.cpp
src/testbed/: CMakeLists.txt  shellcmd.cpp  test.cpp  test.h  test_box.cpp  test_box.h  test_collada.cpp  test_collada.h  test_command.cpp  test_depth.cpp  test_lambert.cpp  test_line.cpp  test_line.h  test_main.cpp  test_mipmap.cpp  test_mipmap.h  test_rasterizer.cpp  test_swizzle.cpp  test_texture.cpp  test_texture.h  test_wireframe.cpp
src/testbed/material/: mtl_color.h  mtl_diffuse.h  mtl_lambert.h  mtl_wireframe.h
(+303 files in other folders)
